--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ewshopstudy",
+  "name": "ewshop",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,8 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^0.25.0",
+    "axios": "^0.21.1",
+    "better-scroll": "^2.1.1",
     "core-js": "^3.6.5",
+    "vant": "^3.0.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -16,13 +18,12 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
+    "babel-plugin-import": "^1.13.3",
     "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "typescript": "~4.1.5"
+    "sass-loader": "^8.0.2"
   },
   "browserslist": [
     "> 1%",
